dataset1235/2025-2/610742602/users/2705833823/executions/2563853024_593159971.log
== RUN (2025-09-02 20:24:38)
-- CODE: 
nota1 = float(input("Insira o valor da primeira nota:"))
nota2 = float(input("Insira o valor da segunda nota:"))
nota3 = float(input("Insira o valor da terceira nota:"))
media = (nota1 + nota2 + notas3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:25:05)
-- CODE: 
nota1 = float(input("Insira o valor da primeira nota:"))
nota2 = float(input("Insira o valor da segunda nota:"))
nota3 = float(input("Insira o valor da terceira nota:"))
media = (nota1 + nota2 + nota3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
Insira o valor da primeira nota:Insira o valor da segunda nota:Insira o valor da terceira nota:6.2
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
Insira o valor da primeira nota:Insira o valor da segunda nota:Insira o valor da terceira nota:8.3
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
Insira o valor da primeira nota:Insira o valor da segunda nota:Insira o valor da terceira nota:5.5
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
Insira o valor da primeira nota:Insira o valor da segunda nota:Insira o valor da terceira nota:2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
Insira o valor da primeira nota:Insira o valor da segunda nota:Insira o valor da terceira nota:9.1
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
Insira o valor da primeira nota:Insira o valor da segunda nota:Insira o valor da terceira nota:3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:25:14)
-- CODE: 
nota1 = float(input("Insira o valor da primeira nota:"))
nota2 = float(input("Insira o valor da segunda nota:"))
nota3 = float(input("Insira o valor da terceira nota:"))
media = (nota1 + nota2 + nota3) / 3
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
Insira o valor da primeira nota:Insira o valor da segunda nota:Insira o valor da terceira nota:6.2
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
Insira o valor da primeira nota:Insira o valor da segunda nota:Insira o valor da terceira nota:8.3
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
Insira o valor da primeira nota:Insira o valor da segunda nota:Insira o valor da terceira nota:5.5
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
Insira o valor da primeira nota:Insira o valor da segunda nota:Insira o valor da terceira nota:2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
Insira o valor da primeira nota:Insira o valor da segunda nota:Insira o valor da terceira nota:9.1
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
Insira o valor da primeira nota:Insira o valor da segunda nota:Insira o valor da terceira nota:3.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
